<resources>
    <string name="app_name">IntentProject1</string>
    <string name="choose_number">Choose Number</string>
    <string name="_50">50</string>
    <string name="_100">100</string>
    <string name="_150">150</string>
    <string name="_200">200</string>
    <string name="choose">Choose</string>

    <string name="result_from_activity">Result From Activity</string>
    <string name="biodata">Biodata</string>
    <string name="move_with_result">Move With Result</string>
    <string name="dial_number">Dial Number</string>
    <string name="move_with_object">Move With Object</string>
    <string name="move_data">Move Data</string>
    <string name="button_pindah">Button Pindah</string>
    <string name="ini_halaman_pindah">Ini Halaman Pindah</string>
    <string name="data_received">Data Received</string>
    <string name="object_received">Object Received</string>
    <string name="prodi_Sistem_Informasi">Prodi : Sistem Informasi</string>
    <string name="nama_josua_Astra_Silitonga">Nama : Josua Astra Silitonga</string>
    <string name="nim_1910031806037">Nim : 1910031806037</string>
    <string name="alamat_pekanbaru">Alamat : Pekanbaru</string>
    <string name="ttl_Pangkalanpisang_02_Desember_2000">TTL : Pangkalan Pisang, 02-Desember-2000</string>
    <string name="hobi_musik">Hobi : Bermain Musik</string>

</resources>